--- a/index.html
+++ b/index.html
@@ -15,6 +15,7 @@
 		<script src="js/jquery.scrolly.min.js"></script>
 		<script src="js/skel.min.js"></script>
 		<script src="js/init.js"></script>
+        <script src="js/action.js"></script>
 		<noscript>
 			<link rel="stylesheet" href="css/skel.css" />
 			<link rel="stylesheet" href="css/style.css" />
@@ -164,7 +165,7 @@
 					<div>
 						<div class="row">
 							<div class="12u">
-								<form method="post" action="#">
+								<form method="post" action="mail_handler.php">
 									<div>
 										<div class="row">
 											<div class="6u">
@@ -201,13 +202,14 @@
 								<hr />
 								<h3>Find me on ...</h3>
 								<ul class="social">
-									<li><a href="#" class="icon fa-twitter"><span class="label">Twitter</span></a></li>
-									<li><a href="#" class="icon fa-facebook"><span class="label">Facebook</span></a></li>
-									<li><a href="#" class="icon fa-dribbble"><span class="label">Dribbble</span></a></li>
-									<li><a href="#" class="icon fa-linkedin"><span class="label">LinkedIn</span></a></li>
-									<li><a href="#" class="icon fa-tumblr"><span class="label">Tumblr</span></a></li>
-									<li><a href="#" class="icon fa-google-plus"><span class="label">Google+</span></a></li>
-									<li><a href="#" class="icon fa-github"><span class="label">Github</span></a></li>
+									<!--<li><a href="#" class="icon fa-twitter"><span class="label">Twitter</span></a></li>-->
+									<li><a href="https://www.facebook.com/pooya.mosaddegh.5" class="icon fa-facebook"><span class="label">Facebook</span></a></li>
+									<!--<li><a href="#" class="icon fa-dribbble"><span class="label">Dribbble</span></a></li>-->
+									<!--<li><a href="#" class="icon fa-tumblr"><span class="label">Tumblr</span></a></li>-->
+									<li><a href="https://plus.google.com/+poOyamOsaddegh" class="icon fa-google-plus"><span class="label">Google+</span></a></li>
+									<li><a href="https://linkedin.com/in/PooyaMosaddegh" class="icon fa-linkedin"><span class="label">LinkedIn</span></a></li>
+									<li><a href="https://github.com/pooyapooya" class="icon fa-github"><span class="label">Github</span></a></li>
+                                    <li><a href="http://itnog.blog.ir/" class="icon fa-wordpress"><span class="label">Blog</span></a></li>
 									<!--
 									<li><a href="#" class="icon fa-rss"><span>RSS</span></a></li>
 									<li><a href="#" class="icon fa-instagram"><span>Instagram</span></a></li>
@@ -215,7 +217,6 @@
 									<li><a href="#" class="icon fa-skype"><span>Skype</span></a></li>
 									<li><a href="#" class="icon fa-soundcloud"><span>Soundcloud</span></a></li>
 									<li><a href="#" class="icon fa-youtube"><span>YouTube</span></a></li>
-									<li><a href="#" class="icon fa-blogger"><span>Blogger</span></a></li>
 									<li><a href="#" class="icon fa-flickr"><span>Flickr</span></a></li>
 									<li><a href="#" class="icon fa-vimeo"><span>Vimeo</span></a></li>
 									-->
